# particle-swarm-algorithm

./: README.md  pyproject.toml
src/: main.ipynb  main.py
src/utils/: matplotlib_animator.py  particle_swarm.py  target_function.py
