[tool.poetry]
name = "particle-swarm-algorithm"
version = "0.1.0"
description = ""
authors = ["Miautawn <miautawn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.5.2"
jupyterlab = "^3.4.2"
black = "^22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
